--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -10,19 +10,22 @@ html
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css")
     body
 
-        +header()
+        if(role.permissions.length > 0)
+            +header()
 
-        .body
-            +sider()
+            .body
+                +sider()
 
-            .main
-                block main
+                .main
+                    block main
 
 
-        script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous")
-        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous")
+            script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous")
+            script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous")
 
-        script(type="application/javascript" src= "/tinymce/tinymce.min.js")
-        script(type="application/javascript" src= "/admin/js/tinymce-config.js")
+            script(type="application/javascript" src= "/tinymce/tinymce.min.js")
+            script(type="application/javascript" src= "/admin/js/tinymce-config.js")
 
-        script(src="/admin/js/script.js")
+            script(src="/admin/js/script.js")
+        else
+            h1 Bạn không có quyền truy cập
