--- a/src/views/admin/mixins/table-tree.pug
+++ b/src/views/admin/mixins/table-tree.pug
@@ -26,35 +26,53 @@ mixin table-tree(items, level = 1)
                     name="position"
                 )
             td
-                if(item.status == "active")
-                    a(
-                        href="javascript:;" 
-                        class="badge rounded-pill text-bg-success"
-                        button-change-status
-                        data-status=item.status
-                        data-id=item.id
-                        ) Hoạt động
+                if(role.permissions.includes("products-category_edit"))
+                    if(item.status == "active")
+                        a(
+                            href="javascript:;" 
+                            class="badge rounded-pill text-bg-success"
+                            button-change-status
+                            data-status=item.status
+                            data-id=item.id
+                            ) Hoạt động
+                    else
+                        a(
+                            href="javascript:;" 
+                            class="badge rounded-pill text-bg-danger"
+                            button-change-status
+                            data-status=item.status
+                            data-id=item.id
+                            ) Dừng hoạt động
                 else
-                    a(
-                        href="javascript:;" 
-                        class="badge rounded-pill text-bg-danger"
-                        button-change-status
-                        data-status=item.status
-                        data-id=item.id
-                        ) Dừng hoạt động
+                    if(item.status == "active")
+                        a(
+                            href="javascript:;" 
+                            class="badge rounded-pill text-bg-success"
+                            data-status=item.status
+                            data-id=item.id
+                            ) Hoạt động
+                    else
+                        a(
+                            href="javascript:;" 
+                            class="badge rounded-pill text-bg-danger"
+                            data-status=item.status
+                            data-id=item.id
+                            ) Dừng hoạt động
             td  
                 a(
                     href=`${prefixAdmin}/products-category/detail/${item.id}` 
                     class="btn btn-secondary btn-sm me-2"
                     ) Chi tiết
-                a(
-                    href=`${prefixAdmin}/products-category/edit/${item.id}`
-                    class="btn btn-warning btn-sm"
-                    ) Sửa
-                button(
-                    class=`btn btn-danger btn-sm ms-2`
-                    button-delete
-                    data-id=item.id
-                    ) Xoá
+                if(role.permissions.includes("products-category_edit"))
+                    a(
+                        href=`${prefixAdmin}/products-category/edit/${item.id}`
+                        class="btn btn-warning btn-sm"
+                        ) Sửa
+                if(role.permissions.includes("products-category_delete"))
+                    button(
+                        class=`btn btn-danger btn-sm ms-2`
+                        button-delete
+                        data-id=item.id
+                        ) Xoá
         if item.children && item.children.length > 0
             +table-tree(item.children, level + 1)
