--- a/src/views/admin/pages/products-category/edit.pug
+++ b/src/views/admin/pages/products-category/edit.pug
@@ -2,104 +2,107 @@ extends ../../layout/default
 include ../../mixins/select-tree.pug
 
 block main 
-    h1(class="mb-4") #{pageTitle}
+    if(role.permissions.includes("products-category_edit"))
+        h1(class="mb-4") #{pageTitle}
 
-    form(
-        action=`${prefixAdmin}/products-category/edit/${data.id}?_method=PATCH`
-        id="form-create-product"
-        method="POST"
-        enctype="multipart/form-data"
-    )
-        div(class="form-group")
-            label(for="parent_id") Tiêu đề
-            input(
-                type="text"
-                class="form-control"
-                id="title"
-                name="title"
-                value=data.title
-                required
-            )
-        div(class="form-group")
-            label(for="parent_id") Danh mục cha
-            select(
-                name="parent_id"
-                id="parent_id"
-                class="form-control"
-            )
-                option(value="") -- Chọn Danh mục --
-                if(records)
-                    +select-tree(records, 1, data.parent_id)
-
-        div(class="form-group")
-            label(for="description") Mô tả
-            textarea(
-                type="text"
-                class="form-control textarea-mce"
-                id="des"
-                name="description"
-            ) #{data.description}
-        div(
-            class="form-group row align-items-center"
-            upload-image
+        form(
+            action=`${prefixAdmin}/products-category/edit/${data.id}?_method=PATCH`
+            id="form-create-product"
+            method="POST"
+            enctype="multipart/form-data"
         )
-            label(for="thumbnail" class="me-2") Ảnh:
-            input(
-                type="file"
-                class="form-control-file"
-                id="thumbnail"
-                name="thumbnail"
-                accept="image/*"
-                upload-image-input
-            )
-            div(
-                class=`clear-image-preview ${data.thumbnail ? '' : 'd-none'}`
-                clear-image-preview 
+            div(class="form-group")
+                label(for="parent_id") Tiêu đề
+                input(
+                    type="text"
+                    class="form-control"
+                    id="title"
+                    name="title"
+                    value=data.title
+                    required
                 )
-                img(
-                    src=data.thumbnail
-                    upload-image-preview
-                    class="image-preview"
-                    )
-                button(
-                    class=`btn btn-danger upload-image-clear ${data.thumbnail ? '' : 'd-none'}`
-                    upload-image-clear
-                    )
-                    i(class="fas fa-times")
+            div(class="form-group")
+                label(for="parent_id") Danh mục cha
+                select(
+                    name="parent_id"
+                    id="parent_id"
+                    class="form-control"
+                )
+                    option(value="") -- Chọn Danh mục --
+                    if(records)
+                        +select-tree(records, 1, data.parent_id)
 
-        div(class="form-group")
-            label(for="position") Vị trí
-            input(
-                type="number"
-                class="form-control"
-                id="positon"
-                name="position"
-                placeholder="Tự động tăng"
-                min="1"
-                value=data.position
+            div(class="form-group")
+                label(for="description") Mô tả
+                textarea(
+                    type="text"
+                    class="form-control textarea-mce"
+                    id="des"
+                    name="description"
+                ) #{data.description}
+            div(
+                class="form-group row align-items-center"
+                upload-image
             )
-        div(class="form-group formp-check form-check-inline")
-            input(
-                type="radio"
-                class="form-check-input"
-                id="statusActive"
-                name="status"
-                value="active"
-                checked=(data.status == 'active' ? true : false)
-            )
-            label(for="statusActive" class="form-check-label") Hoạt động
-        div(class="form-group form-check form-check-inline")
-            input(
-                type="radio"
-                class="form-check-input"
-                id="statusInactive"
-                name="status"
-                value="inactive"
-                checked=(data.status == 'inactive' ? true : false)
-            )
-            label(for="statusActive" class="form-check-label") Dừng hoạt động
-        div(class="form-group")
-            button(
-                type="submit"
-                class="btn btn-primary"
-            ) Cập nhật
+                label(for="thumbnail" class="me-2") Ảnh:
+                input(
+                    type="file"
+                    class="form-control-file"
+                    id="thumbnail"
+                    name="thumbnail"
+                    accept="image/*"
+                    upload-image-input
+                )
+                div(
+                    class=`clear-image-preview ${data.thumbnail ? '' : 'd-none'}`
+                    clear-image-preview 
+                    )
+                    img(
+                        src=data.thumbnail
+                        upload-image-preview
+                        class="image-preview"
+                        )
+                    button(
+                        class=`btn btn-danger upload-image-clear ${data.thumbnail ? '' : 'd-none'}`
+                        upload-image-clear
+                        )
+                        i(class="fas fa-times")
+
+            div(class="form-group")
+                label(for="position") Vị trí
+                input(
+                    type="number"
+                    class="form-control"
+                    id="positon"
+                    name="position"
+                    placeholder="Tự động tăng"
+                    min="1"
+                    value=data.position
+                )
+            div(class="form-group formp-check form-check-inline")
+                input(
+                    type="radio"
+                    class="form-check-input"
+                    id="statusActive"
+                    name="status"
+                    value="active"
+                    checked=(data.status == 'active' ? true : false)
+                )
+                label(for="statusActive" class="form-check-label") Hoạt động
+            div(class="form-group form-check form-check-inline")
+                input(
+                    type="radio"
+                    class="form-check-input"
+                    id="statusInactive"
+                    name="status"
+                    value="inactive"
+                    checked=(data.status == 'inactive' ? true : false)
+                )
+                label(for="statusActive" class="form-check-label") Dừng hoạt động
+            div(class="form-group")
+                button(
+                    type="submit"
+                    class="btn btn-primary"
+                ) Cập nhật
+    else 
+        h1 Bạn không có quyền truy cập vào trang này!
