--- a/src/views/admin/pages/products-category/index.pug
+++ b/src/views/admin/pages/products-category/index.pug
@@ -1,34 +1,38 @@
 extends ../../layout/default
 include ../../mixins/table-tree
 
-block main 
-    h1 Danh mục sản phẩm 
+block main
+    if(role.permissions.includes("products-category_view"))
+        h1 Danh mục sản phẩm 
 
-    .card.mb-3
-        .card-header Danh sách
-            .card-body
-                .row
-                    .col-10
-                    .col-2
-                        a(
-                            href=`${prefixAdmin}/products-category/create`
-                            class="btn btn-outline-success"
-                        ) + Thêm mới
+        .card.mb-3
+            .card-header Danh sách
+                .card-body
+                    .row
+                        .col-10
+                        .col-2
+                            if(role.permissions.includes("products-category_create"))
+                                a(
+                                    href=`${prefixAdmin}/products-category/create`
+                                    class="btn btn-outline-success"
+                                ) + Thêm mới
 
-                table(
-                    class="table table-hover table-sm"
-                    checkbox-multi
-                        )
-                            thead 
-                                tr 
-                                    th
-                                        input(type="checkbox" name="checkall")
-                                    th STT 
-                                    th Hình ảnh
-                                    th Tiêu đề
-                                    th Vị trí
-                                    th Trạng thái
-                                    th Hành động
+                    table(
+                        class="table table-hover table-sm"
+                        checkbox-multi
+                            )
+                                thead 
+                                    tr 
+                                        th
+                                            input(type="checkbox" name="checkall")
+                                        th STT 
+                                        th Hình ảnh
+                                        th Tiêu đề
+                                        th Vị trí
+                                        th Trạng thái
+                                        th Hành động
 
-                            tbody
-                                +table-tree(records)
+                                tbody
+                                    +table-tree(records)
+    else
+        h1 Bạn không có quyền truy cập vào trang này!
