--- a/src/views/admin/pages/products/index.pug
+++ b/src/views/admin/pages/products/index.pug
@@ -6,132 +6,151 @@ include ../../mixins/form-change-multi.pug
 include ../../mixins/sort.pug
 
 block main 
-    - if (messages.success)
-        .message.info
-        div(
-            class="alert alert-primary"
-            show-alert
-            data-time="3000"
-        ) #{messages.success} <span close-alert>x</span>
+    if(role.permissions.includes("products_view"))
+        - if (messages.success)
+            .message.info
+            div(
+                class="alert alert-primary"
+                show-alert
+                data-time="3000"
+            ) #{messages.success} <span close-alert>x</span>
 
-    h1 #{pageTitle}
-    .card.mb-3
-        .card-header Bộ lọc và tìm kiếm
-            .card-body
-                .row 
-                    .col-6
-                        +fillter-status(fillterStatus)
-                    .col-6.d-flex.justify-content-end
-                        .input-group.w-50
-                            +search(keyword)
+        h1 #{pageTitle}
+        .card.mb-3
+            .card-header Bộ lọc và tìm kiếm
+                .card-body
+                    .row 
+                        .col-6
+                            +fillter-status(fillterStatus)
+                        .col-6.d-flex.justify-content-end
+                            .input-group.w-50
+                                +search(keyword)
 
-        +sort
+            +sort
 
-        .card-header Danh sách
-            .card-body
-                +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`, "Xoá tất cả", "delete-all")
+            .card-header Danh sách
+                .card-body
+                    +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`, "Xoá tất cả", "delete-all")
 
-                if products.length > 0
-                    table(
-                        class="table table-hover table-sm"
-                        checkbox-multi
-                    )
-                        thead 
-                            tr 
-                                th
-                                    input(type="checkbox" name="checkall")
-                                th STT 
-                                th Hình ảnh
-                                th Tiêu đề
-                                th Giá
-                                th Vị trí
-                                th Trạng thái
-                                th Hành động
-
-                        tbody
-                            each item, index in products
+                    if products.length > 0
+                        table(
+                            class="table table-hover table-sm"
+                            checkbox-multi
+                        )
+                            thead 
                                 tr 
-                                    td
-                                        input(
-                                            type="checkbox"
-                                            name="id"
-                                            value=item.id
-                                        )
-                                    td #{pagination.limitItems*(pagination.currentPage - 1) + (index + 1)}
-                                    td 
-                                        img(
-                                            src=item.thumbnail
-                                            alt=item.title
-                                            width="100px"
-                                            height="auto"
-                                        )
-                                    td #{item.title}
-                                    td #{item.price}$
-                                    td
-                                        input(
-                                            type="number"
-                                            value=item.position
-                                            style="width: 60px"
-                                            min="1"
-                                            name="position"
-                                        )
-                                    td
-                                        if(item.status == "active")
+                                    th
+                                        input(type="checkbox" name="checkall")
+                                    th STT 
+                                    th Hình ảnh
+                                    th Tiêu đề
+                                    th Giá
+                                    th Vị trí
+                                    th Trạng thái
+                                    th Hành động
+
+                            tbody
+                                each item, index in products
+                                    tr 
+                                        td
+                                            input(
+                                                type="checkbox"
+                                                name="id"
+                                                value=item.id
+                                            )
+                                        td #{pagination.limitItems*(pagination.currentPage - 1) + (index + 1)}
+                                        td 
+                                            img(
+                                                src=item.thumbnail
+                                                alt=item.title
+                                                width="100px"
+                                                height="auto"
+                                            )
+                                        td #{item.title}
+                                        td #{item.price}$
+                                        td
+                                            input(
+                                                type="number"
+                                                value=item.position
+                                                style="width: 60px"
+                                                min="1"
+                                                name="position"
+                                            )
+                                        td
+                                            if(role.permissions.includes("products_edit"))
+                                                if(item.status == "active")
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-success"
+                                                        button-change-status
+                                                        data-status=item.status
+                                                        data-id=item.id
+                                                        ) Hoạt động
+                                                else
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-danger"
+                                                        button-change-status
+                                                        data-status=item.status
+                                                        data-id=item.id
+                                                        ) Dừng hoạt động
+                                            else
+                                                if(item.status == "active")
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-success"
+                                                        data-id=item.id
+                                                        ) Hoạt động
+                                                else
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-danger"
+                                                        data-id=item.id
+                                                        ) Dừng hoạt động
+                                        td  
                                             a(
-                                                href="javascript:;" 
-                                                class="badge rounded-pill text-bg-success"
-                                                button-change-status
-                                                data-status=item.status
-                                                data-id=item.id
-                                                ) Hoạt động
-                                        else
-                                            a(
-                                                href="javascript:;" 
-                                                class="badge rounded-pill text-bg-danger"
-                                                button-change-status
-                                                data-status=item.status
-                                                data-id=item.id
-                                                ) Dừng hoạt động
-                                    td  
-                                        a(
-                                            href=`${prefixAdmin}/products/detail/${item.id}` 
-                                            class="btn btn-secondary btn-sm me-2"
-                                            ) Chi tiết
-                                        a(
-                                            class="btn btn-warning btn-sm"
-                                            href=`${prefixAdmin}/products/edit/${item.id}`
-                                            ) Sửa
-                                        button(
-                                            class=`btn ${nameTitle.classBtn} btn-sm ms-2`
-                                            button-delete
-                                            data-id=item.id
-                                            ) #{nameTitle.restore}
-                else
-                    table.table.table-hover.table-sm
-                        thead 
-                            tr 
-                                th STT 
-                                th Hình ảnh
-                                th Tiêu đề
-                                th Giá
-                                th Vị trí
-                                th Trạng thái
-                                th Hành động
-                    h1.text-danger.text-center Không tìm thấy sản phẩm nào!
-    +pagination(pagination)
+                                                href=`${prefixAdmin}/products/detail/${item.id}` 
+                                                class="btn btn-secondary btn-sm me-2"
+                                                ) Chi tiết
+                                            if(role.permissions.includes("products_delete"))
+                                                a(
+                                                    class="btn btn-warning btn-sm"
+                                                    href=`${prefixAdmin}/products/edit/${item.id}`
+                                                    ) Sửa
+                                            if(role.permissions.includes("products_delete"))
+                                                button(
+                                                    class=`btn ${nameTitle.classBtn} btn-sm ms-2`
+                                                    button-delete
+                                                    data-id=item.id
+                                                    ) #{nameTitle.restore}
+                    else
+                        table.table.table-hover.table-sm
+                            thead 
+                                tr 
+                                    th STT 
+                                    th Hình ảnh
+                                    th Tiêu đề
+                                    th Giá
+                                    th Vị trí
+                                    th Trạng thái
+                                    th Hành động
+                        h1.text-danger.text-center Không tìm thấy sản phẩm nào!
+        +pagination(pagination)
 
-    form(
-        action="", 
-        method="POST"
-        id="form-change-status"
-        data-path=`${prefixAdmin}/products/change-status`
-        )
+        form(
+            action="", 
+            method="POST"
+            id="form-change-status"
+            data-path=`${prefixAdmin}/products/change-status`
+            )
 
-    form(
-        action="", 
-        method="POST"
-        id="form-delete-status"
-        data-path=`${prefixAdmin}/products/delete`
-        )
+        form(
+            action="", 
+            method="POST"
+            id="form-delete-status"
+            data-path=`${prefixAdmin}/products/delete`
+            )
 
-    script(src="/admin/js/product.js")
+        script(src="/admin/js/product.js")
+    else 
+        h1 Bạn không có quyền truy cập vào trang này!
