--- a/src/views/admin/pages/products/trashpage.pug
+++ b/src/views/admin/pages/products/trashpage.pug
@@ -5,130 +5,151 @@ include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
 
 block main 
-    h1 #{pageTitle}
+    if(role.permissions.includes("products-trash_view"))
+        h1 #{pageTitle}
 
-    .card.mb-3
-        .card-header Bộ lọc và tìm kiếm
-            .card-body
-                .row 
-                    .col-6
-                        +fillter-status(fillterStatus)
-                    .col-6.d-flex.justify-content-end
-                        .input-group.w-50
-                            +search(keyword)
+        .card.mb-3
+            .card-header Bộ lọc và tìm kiếm
+                .card-body
+                    .row 
+                        .col-6
+                            +fillter-status(fillterStatus)
+                        .col-6.d-flex.justify-content-end
+                            .input-group.w-50
+                                +search(keyword)
 
-    .card.mb-3
-        .card-header Danh sách
-            .card-body
-                +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`, "Khôi phục tất cả", "restore-all")
+        .card.mb-3
+            .card-header Danh sách
+                .card-body
+                    +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`, "Khôi phục tất cả", "restore-all")
 
-                if products.length > 0
-                    table(
-                        class="table table-hover table-sm"
-                        checkbox-multi
-                    )
-                        thead 
-                            tr 
-                                th
-                                    input(type="checkbox" name="checkall")
-                                th STT 
-                                th Hình ảnh
-                                th Tiêu đề
-                                th Giá
-                                th Vị trí
-                                th Trạng thái
-                                th Hành động
-
-                        tbody
-                            each item, index in products
+                    if products.length > 0
+                        table(
+                            class="table table-hover table-sm"
+                            checkbox-multi
+                        )
+                            thead 
                                 tr 
-                                    td
-                                        input(
-                                            type="checkbox"
-                                            name="id"
-                                            value=item.id
-                                        )
-                                    td #{index+1}
-                                    td 
-                                        img(
-                                            src=item.thumbnail
-                                            alt=item.title
-                                            width="100px"
-                                            height="auto"
-                                        )
-                                    td #{item.title}
-                                    td #{item.price}$
-                                    td
-                                        input(
-                                            type="number"
-                                            value=item.position
-                                            style="width: 60px"
-                                            min="1"
-                                            name="position"
-                                        )
-                                    td
-                                        if(item.status == "active")
-                                            a(
-                                                href="javascript:;" 
-                                                class="badge rounded-pill text-bg-success"
-                                                button-change-status
-                                                data-status=item.status
-                                                data-id=item.id
-                                                ) Hoạt động
-                                        else
-                                            a(
-                                                href="javascript:;" 
-                                                class="badge rounded-pill text-bg-danger"
-                                                button-change-status
-                                                data-status=item.status
-                                                data-id=item.id
-                                                ) Dừng hoạt động
-                                    td  
-                                        button(class="btn btn-warning btn-sm") Sửa
-                                        button(
-                                            class=`btn ${nameTitle.classBtn} btn-sm ms-2`
-                                            button-restore
-                                            data-id=item.id
-                                            ) #{nameTitle.restore}
-                                        button(
-                                            class=`btn btn-danger btn-sm ms-2`
-                                            button-delete-f
-                                            data-id=item.id
-                                            ) Xoá vĩnh viễn
+                                    th
+                                        input(type="checkbox" name="checkall")
+                                    th STT 
+                                    th Hình ảnh
+                                    th Tiêu đề
+                                    th Giá
+                                    th Vị trí
+                                    th Trạng thái
+                                    th Hành động
 
-                else
-                    table.table.table-hover.table-sm
-                        thead 
-                            tr 
-                                th STT 
-                                th Hình ảnh
-                                th Tiêu đề
-                                th Giá
-                                th Vị trí
-                                th Trạng thái
-                                th Hành động
-                    h1.text-danger.text-center Không tìm thấy sản phẩm nào!
-    +pagination(pagination)
+                            tbody
+                                each item, index in products
+                                    tr 
+                                        td
+                                            input(
+                                                type="checkbox"
+                                                name="id"
+                                                value=item.id
+                                            )
+                                        td #{index+1}
+                                        td 
+                                            img(
+                                                src=item.thumbnail
+                                                alt=item.title
+                                                width="100px"
+                                                height="auto"
+                                            )
+                                        td #{item.title}
+                                        td #{item.price}$
+                                        td
+                                            input(
+                                                type="number"
+                                                value=item.position
+                                                style="width: 60px"
+                                                min="1"
+                                                name="position"
+                                            )
+                                        td
+                                            if(role.permissions.includes("products-trash_edit"))
+                                                if(item.status == "active")
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-success"
+                                                        button-change-status
+                                                        data-status=item.status
+                                                        data-id=item.id
+                                                        ) Hoạt động
+                                                else
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-danger"
+                                                        button-change-status
+                                                        data-status=item.status
+                                                        data-id=item.id
+                                                        ) Dừng hoạt động
+                                            else 
+                                                if(item.status == "active")
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-success"
+                                                        data-status=item.status
+                                                        data-id=item.id
+                                                        ) Hoạt động
+                                                else
+                                                    a(
+                                                        href="javascript:;" 
+                                                        class="badge rounded-pill text-bg-danger"
+                                                        data-status=item.status
+                                                        data-id=item.id
+                                                        ) Dừng hoạt động
+                                        td  
+                                            if(role.permissions.includes("products-trash_edit"))
+                                                button(class="btn btn-warning btn-sm") Sửa
+                                            if(role.permissions.includes("products-trash_delete"))
+                                                button(
+                                                    class=`btn ${nameTitle.classBtn} btn-sm ms-2`
+                                                    button-restore
+                                                    data-id=item.id
+                                                    ) #{nameTitle.restore}
+                                                button(
+                                                    class=`btn btn-danger btn-sm ms-2`
+                                                    button-delete-f
+                                                    data-id=item.id
+                                                    ) Xoá vĩnh viễn
 
-    form(
-        action="", 
-        method="POST"
-        id="form-change-status"
-        data-path=`${prefixAdmin}/products/change-status`
-        )
+                    else
+                        table.table.table-hover.table-sm
+                            thead 
+                                tr 
+                                    th STT 
+                                    th Hình ảnh
+                                    th Tiêu đề
+                                    th Giá
+                                    th Vị trí
+                                    th Trạng thái
+                                    th Hành động
+                        h1.text-danger.text-center Không tìm thấy sản phẩm nào!
+        +pagination(pagination)
 
-    form(
-        action="", 
-        method="POST"
-        id="form-restore-status"
-        data-path=`${prefixAdmin}/products/trash/restore`
-        )
+        form(
+            action="", 
+            method="POST"
+            id="form-change-status"
+            data-path=`${prefixAdmin}/products/change-status`
+            )
 
-    form(
-        action="", 
-        method="POST"
-        id="form-delete-f"
-        data-path=`${prefixAdmin}/products/trash/deletef`
-        )
+        form(
+            action="", 
+            method="POST"
+            id="form-restore-status"
+            data-path=`${prefixAdmin}/products/trash/restore`
+            )
 
-    script(src="/admin/js/product.js")
+        form(
+            action="", 
+            method="POST"
+            id="form-delete-f"
+            data-path=`${prefixAdmin}/products/trash/deletef`
+            )
+
+        script(src="/admin/js/product.js")
+    else
+        h1 Bạn không có quyền truy cập vào trang này!
