--- a/src/views/admin/pages/roles/permissions.pug
+++ b/src/views/admin/pages/roles/permissions.pug
@@ -1,126 +1,174 @@
 extends ../../layout/default
 
 block main
-    h1(class="mb-4") #{pageTitle}
+    if(role.permissions.includes("roles_permissions"))
+        h1(class="mb-4") #{pageTitle}
 
-    if(records)
-        div(data-records=records)
+        if(records)
+            div(data-records=records)
 
-    div(class="row")
-        div(class="col-10")
-        div(class="col-2 text-end")
-            button(
-                type="submit"
-                class="btn btn-primary mb-3"
-                button-submit
-            ) Cập nhật
+        div(class="row")
+            div(class="col-10")
+            div(class="col-2 text-end")
+                button(
+                    type="submit"
+                    class="btn btn-primary mb-3"
+                    button-submit
+                ) Cập nhật
 
-    table(
-        class="table table-hover table-sm"
-        table-permission
-    )
-        thead
-            tr 
-                th Tính năng
+        table(
+            class="table table-hover table-sm"
+            table-permission
+        )
+            thead
+                tr 
+                    th Tính năng
+                        each item in records
+                            th(class="text-center") #{item.title}
+            tbody
+                //- Danh mục sản phẩm
+                tr(data-name="id" class="d-none")
+                    td
                     each item in records
-                        th(class="text-center") #{item.title}
-        tbody
-            //- Danh mục sản phẩm
-            tr(data-name="id" class="d-none")
-                td
-                each item in records
-                    td(class="text-center")
-                        input(type="text" value=item.id)
-            tr
-                td(colspan="4")
-                    b Danh mục sản phẩm
-            tr(data-name="products-category_view")
-                td Xem
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="products-category_create")
-                td Thêm mới
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="products-category_eidt")
-                td Chỉnh sửa
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="products-category_delete")
-                td Xoá
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
+                        td(class="text-center")
+                            input(type="text" value=item.id)
+                tr
+                    td(colspan="4")
+                        b Danh mục sản phẩm
+                tr(data-name="products-category_view")
+                    td Xem
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products-category_create")
+                    td Thêm mới
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products-category_edit")
+                    td Chỉnh sửa
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products-category_delete")
+                    td Xoá
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
 
-            //- Sản phẩm
-            tr
-                td(colspan="4")
-                    b Sản phẩm
-            tr(data-name="products_view")
-                td Xem
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="products_create")
-                td Thêm mới
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="products_eidt")
-                td Chỉnh sửa
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="products_delete")
-                td Xoá
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
+                //- Sản phẩm
+                tr
+                    td(colspan="4")
+                        b Sản phẩm
+                tr(data-name="products_view")
+                    td Xem
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products_create")
+                    td Thêm mới
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products_eidt")
+                    td Chỉnh sửa
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products_delete")
+                    td Xoá
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
 
-            //- Nhóm quyền
-            tr
-                td(colspan="4")
-                    b Nhóm quyền
-            tr(data-name="roles_view")
-                td Xem
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="roles_create")
-                td Thêm mới
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="roles_eidt")
-                td Chỉnh sửa
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="roles_delete")
-                td Xoá
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
-            tr(data-name="roles_permissions")
-                td Phân quyền
-                each item in records
-                    td(class="text-center")
-                        input(type="checkbox" value=item.id)
+                //- Nhóm quyền
+                tr
+                    td(colspan="4")
+                        b Nhóm quyền
+                tr(data-name="roles_view")
+                    td Xem
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="roles_create")
+                    td Thêm mới
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="roles_eidt")
+                    td Chỉnh sửa
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="roles_delete")
+                    td Xoá
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="roles_permissions")
+                    td Phân quyền
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
 
-    form(
-        id="form-change-permissions"
-        method="POST"
-        action=`${prefixAdmin}/roles/permissions?_method=PATCH`
-        class="d-none"
-    )
-        div(class="form-group")
-            input(
-                type="text"
-                class="form-control"
-                name="permissions"
-            )
+                //- Danh sách tài khoản
+                tr
+                    td(colspan="4")
+                        b Danh sách tài khoản
+                tr(data-name="accoutns_view")
+                    td Xem
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="accoutns_create")
+                    td Thêm mới
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="accoutns_eidt")
+                    td Chỉnh sửa
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="accoutns_delete")
+                    td Xoá
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
 
-    script(src="/admin/js/role.js")
+                //- Thùng rác
+                tr
+                    td(colspan="4")
+                        b Thùng rác
+                tr(data-name="products-trash_view")
+                    td Xem
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products-trash_edit")
+                    td Chỉnh sửa
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+                tr(data-name="products-trash_delete")
+                    td Xoá
+                    each item in records
+                        td(class="text-center")
+                            input(type="checkbox" value=item.id)
+
+        form(
+            id="form-change-permissions"
+            method="POST"
+            action=`${prefixAdmin}/roles/permissions?_method=PATCH`
+            class="d-none"
+        )
+            div(class="form-group")
+                input(
+                    type="text"
+                    class="form-control"
+                    name="permissions"
+                )
+
+        script(src="/admin/js/role.js")
+    else
+        h1 Bạn không có quyền truy cập vào trang này!
