--- a/src/views/admin/pages/roles/permissions.pug
+++ b/src/views/admin/pages/roles/permissions.pug
@@ -70,7 +70,7 @@ block main
                     each item in records
                         td(class="text-center")
                             input(type="checkbox" value=item.id)
-                tr(data-name="products_eidt")
+                tr(data-name="products_edit")
                     td Chỉnh sửa
                     each item in records
                         td(class="text-center")
