--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -8,7 +8,7 @@ mixin sider()
                 if(role.permissions.includes("products_view"))
                     li.d-flex.align-items-center
                         i(class="fa-solid fa-box fs-6")
-                        a(href=`${prefixAdmin}/products`) Sản phẩm
+                        a(href=`${prefixAdmin}/products`) Danh sách sản phẩm
                 if(role.permissions.includes("products-category_view"))
                     li.d-flex.align-items-center
                         i(class="fa-solid fa-boxes-stacked fs-6")
