--- a/src/views/admin/pages/products/index.pug
+++ b/src/views/admin/pages/products/index.pug
@@ -4,6 +4,7 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
 include ../../mixins/sort.pug
+include ../../mixins/moment.pug
 
 block main 
     if(role.permissions.includes("products_view"))
@@ -47,6 +48,8 @@ block main
                                     th Giá
                                     th Vị trí
                                     th Trạng thái
+                                    th Người tạo
+                                    th Người cập nhật
                                     th Hành động
 
                             tbody
@@ -107,6 +110,17 @@ block main
                                                         class="badge rounded-pill text-bg-danger"
                                                         data-id=item.id
                                                         ) Dừng hoạt động
+                                        td 
+                                            p #{item.accountFullName}
+                                            p 
+                                                +formatDateTime(item.createdBy.createdAt)
+                                        td 
+                                            - const updatedBy = item.updatedBy.slice(-1)[0]
+                                            if(updatedBy)
+                                                p #{updatedBy.accountFullName}
+                                                p 
+                                                    +formatDateTime(updatedBy.updatedAt)
+
                                         td  
                                             a(
                                                 href=`${prefixAdmin}/products/detail/${item.id}` 
