--- a/src/views/admin/partials/header.pug
+++ b/src/views/admin/partials/header.pug
@@ -10,5 +10,5 @@ mixin header()
                     div(class="text-end")
                         a(
                             href=`${prefixAdmin}/auth/logout`
-                            class="btn btn-outline-danger me-2"
+                            class="btn btn-danger me-2"
                         ) Đăng xuất
