--- a/src/views/admin/pages/products/create.pug
+++ b/src/views/admin/pages/products/create.pug
@@ -30,6 +30,25 @@ block main
                     option(value="") -- Chọn Danh mục --
                     if(category)
                         +select-tree(category)
+            div(class="form-group form-check form-check-inline")
+                input(
+                    type="radio"
+                    class="form-check-input"
+                    id="featured1"
+                    name="featured"
+                    vaule="1"
+                )
+                label(for="featured1" class="form-check-label") Nổi bật
+            div(class="form-group form-check form-check-inline")
+                input(
+                    type="radio"
+                    class="form-check-input"
+                    id="featured0"
+                    name="featured"
+                    value="0"
+                    checked
+                )
+                label(for="featured0" class="form-check-label") Không
 
             div(class="form-group")
                 label(for="description") Mô tả
