--- a/src/views/client/pages/products/index.pug
+++ b/src/views/client/pages/products/index.pug
@@ -1,5 +1,6 @@
 extends ../../layout/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/product-layout.pug
 
 block main 
     .container.my-3 
@@ -7,18 +8,7 @@ block main
             .col-12
                 +box-head("Danh Sách Sản Phẩm")
 
-        .row
-            each item in products
-                .col-4.mb-3
-                    .product-item
-                        .inner-image
-                            img(src=item.thumbnail alt=item.title style="width: 100px")
-                        .inner-content
-                            h3.inner-title
-                                a(href=`/products/${item.slug}`) #{item.title}
-                            .inner-price-new #{item.priceNew}$
-                            .inner-price-old #{item.price}$
-                            .inner-discount #{item.discountPercentage}%
+        +product-grid(products)
     //- ul
     //- each item, index in products
     //- li #{index+1} #{item.title} - #{item.price}$
