slug category products

--- a/src/views/client/pages/home/index.pug
+++ b/src/views/client/pages/home/index.pug
@@ -47,3 +47,10 @@ block main
                 .col-12
                     +box-head("Sản Phẩm Nổi Bật")
             +product-grid(productsFeautured)
+
+    .section-products-new.my-5
+        .container
+            .row
+                .col-12
+                    +box-head("Sản Phẩm Nổi Bật")
+            +product-grid(productNew)
