--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -59,4 +59,4 @@ mixin header()
                             a(href="/products") Wishlist           
                         li
                             i(class="fa-solid fa-bag-shopping")
-                            a(href="/products") Cart (#{miniCart ? miniCart.totalQuantity : 0})
+                            a(href="/cart") Cart (#{miniCart ? miniCart.totalQuantity : 0})
