--- a/src/views/admin/pages/roles/permissions.pug
+++ b/src/views/admin/pages/roles/permissions.pug
@@ -125,7 +125,7 @@ block main
                     each item in records
                         td(class="text-center")
                             input(type="checkbox" value=item.id)
-                tr(data-name="accoutns_eidt")
+                tr(data-name="accoutns_edit")
                     td Chỉnh sửa
                     each item in records
                         td(class="text-center")
