--- a/src/views/client/pages/cart/index.pug
+++ b/src/views/client/pages/cart/index.pug
@@ -35,7 +35,7 @@ block main
                                             name="quantity"
                                             value=item.quantity
                                             min="1"
-                                            item-id=""
+                                            product-id=item.product_id
                                             style="width: 60px"
                                         )
                                     td #{item.totalPrice}$
@@ -49,3 +49,5 @@ block main
 
                     div(class="text-right mt-3")
                         a(href="/checkout" class="btn btn-success") Thanh toán
+
+    script(src="/js/cart.js") 
