--- a/src/views/admin/pages/account/index.pug
+++ b/src/views/admin/pages/account/index.pug
@@ -1,4 +1,5 @@
 extends ../../layout/default
+include ../../mixins/search
 
 block main
     if(role.permissions.includes("accoutns_view"))
@@ -10,7 +11,7 @@ block main
                 .row
                     .col-8 
                     .col-4.text-end
-                        if(role.permissions.includes("accounts_create"))
+                        if(role.permissions.includes("accoutns_create"))
                             a(
                                 href=`${prefixAdmin}/accounts/create`
                                 class="btn btn-outline-success"
@@ -61,12 +62,12 @@ block main
                                         href=`${prefixAdmin}/accounts/detail/${item.id}`
                                         class="btn btn-primary btn-sm"
                                     ) Chi tiết
-                                    if(role.permissions.includes("accounts_edit"))
+                                    if(role.permissions.includes("accoutns_edit"))
                                         a(
                                             href=`${prefixAdmin}/accounts/edit/${item.id}`
                                             class="btn btn-warning btn-sm ms-2"
                                         ) Sửa
-                                    if(role.permissions.includes("accounts_delete"))
+                                    if(role.permissions.includes("accoutns_delete"))
                                         a(
                                             href=`${prefixAdmin}/accounts/delete/${item.id}`
                                             class="btn btn-danger btn-sm ms-2"
